Fixing footer margins on smaller devices

--- a/src/scss/objects.wrapper.scss
+++ b/src/scss/objects.wrapper.scss
@@ -170,6 +170,9 @@
   @include media-breakpoint-down(md) {
     margin: 0 100px;
   }
+  @include media-breakpoint-down(sm) {
+    margin: 0 10px;
+  }
 
   .o-content-footernav-site {
     display: flex;
